tests222/tests2/test284.out
lli: <stdin>:1:1: error: expected top-level entity
line 10: unexpected continue statement
^
